auth working successfully

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.username=postgres
 spring.datasource.password=0000
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+jwt.secret=ht0J4Sk194KjRU3fDQ5hAe39Pb983pLjXzLk7KMZ/Yo=
+jwt.expiration=900000
+
